# roguelike

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt
src/: main.c
